--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-static-website-seed",
+  "name": "deployer-app",
   "version": "1.0.0",
-  "description": "To get started, first install all the necessary dependencies. ``` > npm install ```",
+  "description": "React app dor Deployer",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
@@ -13,14 +13,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MindeVieras/react-static-website-seed.git"
+    "url": "git+https://github.com/MindeVieras/deployer-app.git"
   },
   "author": "Minde Vieras",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/MindeVieras/react-static-website-seed/issues"
+    "url": "https://github.com/MindeVieras/deployer-app/issues"
   },
-  "homepage": "https://github.com/MindeVieras/react-static-website-seed#readme",
+  "homepage": "https://github.com/MindeVieras/deployer-app#readme",
   "dependencies": {
     "bootstrap": "^4.0.0",
     "react": "^16.2.0",
