--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,8 @@
     "max-len": [1, 120, 2, {ignoreComments: true}],
     "indent": ["error", 2],
     "semi": ["error", "never"],
-    "eol-last": ["error", "always"]
+    "eol-last": ["error", "always"],
+    "react/prop-types": [2, { skipUndeclared: false }],
+    "react/require-default-props": [2, { forbidDefaultForRequired: true }]
   }
 }
