--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/MindeVieras/deployer-app#readme",
   "dependencies": {
+    "history": "^4.7.2",
     "material-ui": "^1.0.0-beta.39",
     "material-ui-icons": "^1.0.0-beta.36",
     "normalize.css": "^8.0.0",
